--- a/src/components/history/History.module.css
+++ b/src/components/history/History.module.css
@@ -7,6 +7,7 @@
   min-width: 400px;
   height: 50vh;
   max-height: 600px;
+  min-height: 300px;
   border: 5px solid var(--bg-secondary-color);
   border-radius: 1em;
   padding: 1em;
